--- a/Xamarin_projet/Xamarin_projet/Xamarin_projet.csproj
+++ b/Xamarin_projet/Xamarin_projet/Xamarin_projet.csproj
@@ -15,5 +15,8 @@
     <EmbeddedResource Update="Views\MessageListPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\MessagePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
