--- a/Xamarin_projet/Xamarin_projet.UWP/Xamarin_projet.UWP.csproj
+++ b/Xamarin_projet/Xamarin_projet.UWP/Xamarin_projet.UWP.csproj
@@ -143,6 +143,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="sqlite-net-pcl">
+      <Version>1.7.302-beta</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.2.0.709249" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.9" />
     <PackageReference Include="Xamarin.Essentials" Version="1.2.0" />
