--- a/Xamarin_projet/Xamarin_projet.Android/Xamarin_projet.Android.csproj
+++ b/Xamarin_projet/Xamarin_projet.Android/Xamarin_projet.Android.csproj
@@ -56,6 +56,9 @@
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.7.302-beta</Version>
     </PackageReference>
+    <PackageReference Include="SQLitePCLRaw.lib.e_sqlite3.android">
+      <Version>2.0.2</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.2.0.709249" />
     <PackageReference Include="Xamarin.Android.Support.Core.Utils" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Essentials" Version="1.2.0" />
